# jobGerman

./: .gitignore  README.md  Structure.md  alembic.ini  docker-compose.yml  dockerfile  pyproject.toml
alembic/: env.py
alembic/versions/: 7eafcd7b2d4b_initial.py  a1b2c3d4e5f6_v2_features.py  b2c3d4e5f6a7_resume_and_cv.py  c3d4e5f6a7b8_tests.py
app/: main.py
app/api/v1/endpoints/: admin_stats_router.py  application_router.py  auth_router.py  chat_router.py  document_router.py  job_router.py  media_router.py  notification_router.py  profile_router.py  relocation_router.py  router.py  (+3 more)
app/config/: config.py  database.py  rate_limit.py  security.py
app/dependencies/: auth.py
app/models/: application.py  applicition.py  base.py  case_stage_history.py  chat_message.py  document.py  init.py  job.py  media.py  models_docs.md  notification.py  relocation.py  resume.py  test.py  user.py
app/repositories/: application_repository.py  case_history_repository.py  chat_repository.py  document_repository.py  job_repositore.py  media_repository.py  notification_repository.py  profeli_repository.py  relocation_repository.py  user_repository.py
app/schemas/: appliction.py  auth.py  document.py  job.py  media.py  profile.py  relocation.py  resume.py  test.py  user.py
app/service/: application_service.py  auth_service.py  document_service.py  job_service.py  media_service.py  notification_service.py  profile_service.py  relocation_service.py
app/storage/: minio.py
docs/scenarios/: candidate_student.md  candidate_worker.md  manager.md
docs/testing/: e2e_test_report.md
